# sales_prediction

./: .gitattributes  .gitignore  Makefile  README.md  bump_version.py  datasets.dvc  etl_pipeline.py  pyproject.toml  requirements.txt  sales_predict.ipynb
.github/workflows/: ci.yml  publish-testpypi.yml
docs/: eda.md  etl.md  feature_engineering.md  modeling.md
ds_package/: README.md  pyproject.toml
ds_package/src/: fe_pipeline.py  trainer.py
ds_package/src/kaggle_comp_future_sales_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
etl/: etl_pipeline.py
fe_pipeline/: fe_pipeline.py
notebooks/: DQC_and_ETL.ipynb  EDA.ipynb  feature_engineering.ipynb  modeling.ipynb
src/data/: etl_pipeline.py
src/feature/: fe_pipeline.py  validation_schema_1.py  validation_schema_2.py  validator.py
src/feature/fe_pipeline/: fe_pipeline.py
src/feature/run_pipe/: run_pipeline.py
src/feature/validation_schema/: validation_schema_1.py  validation_schema_2.py
src/feature/validator/: validator.py
src/sales_forecasting/data/: etl_pipeline.py
src/sales_forecasting/feature/: fe_pipeline.py
src/sales_forecasting/modeling/: inference.py  model.py  tester.py  trainer.py
src/sales_forecasting/utils/: logger.py
src/sales_forecasting/validation/: validator.py
src/sales_forecasting/validation/validation_schemas/: fe_schema.py  raw_schema.py
src/scripts/: bump_version.py  inference.py  run_pipeline.py  train.py
validation_schema/: validation_schema_1.py  validation_schema_2.py
